<resources>
    <string name="app_name">ContentProvider</string>
    <string name="title_activity_test">Test</string>
    <string name="notation_inptistes">Notation INPTistes</string>
    <string name="retrouver_notes">Retrouver Notes</string>
    <string name="note_inptiste">Note inptiste</string>
    <string name="note">Note</string>
    <string name="nom_inptiste">Nom inptiste</string>
    <string name="nom">Nom</string>
    <string name="ajouter_note_inptiste">Ajouter note inptiste</string>
    <string name="num">Num de TEL</string>
    <string name="email">Email</string>
    <string name="datenaiss">Jour de naissance</string>
    <string name="supprimer_notes">Delete button</string>
    <string name="deleteText">Student Id</string>
</resources>