<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notation_inptistes"
        android:textColorHighlight="#00913737"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/editTextStudentId"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="num inptiste"
        android:ems="10"
        android:hint="@string/deleteText"
        android:inputType="number"
        android:text="@string/deleteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="Nom inptiste"
        android:ems="10"
        android:hint="@string/nom_inptiste"
        android:inputType="textPersonName"
        android:text="@string/nom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <EditText
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="num inptiste"
        android:ems="10"
        android:hint="@string/note_inptiste"
        android:inputType="number"
        android:text="@string/num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="email inptiste"
        android:ems="10"
        android:hint="@string/nom_inptiste"
        android:inputType="textPersonName"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <EditText
        android:id="@+id/datenaiss"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="100dp"
        android:autofillHints="date de naissance inptiste"
        android:ems="10"
        android:hint="@string/nom_inptiste"
        android:inputType="textPersonName"
        android:text="@string/datenaiss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <Button
        android:id="@+id/btnSearchStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickSearchStudent"
        android:text="Search Student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/btnModifyStudent"
        android:layout_width="120dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="90dp"
        android:onClick="onClickModifyStudent"
        android:text="Modify Student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_marginBottom="90dp"
        android:onClick="onClickRetrouverNotesInptistes"
        android:text="@string/retrouver_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnDeleteStudent"
        android:layout_width="106dp"
        android:layout_height="57dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="90dp"
        android:onClick="onClickDeleteStudent"
        android:text="@string/supprimer_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="71dp"
        android:layout_height="66dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/ajouter_note_inptiste"
        android:onClick="onClickAjouterNoteInptiste"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        tools:src="@mipmap/ic_launcher" />
</androidx.constraintlayout.widget.ConstraintLayout>